--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
+
   <div class="wrapper">
     <header>
-      <h2>PIANO</h2>
+      <h2>R3DHULK'S PIANO</h2>
       <div class="column volume-slider">
         <span>Volume</span><input type="range" min="0" max="1" value="0.5" step="any">
       </div>
