--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js" defer></script>
+  <link rel="icon" href="icon.png">
 </head>
 
 <body>
 
   <div class="wrapper">
     <header>
-      <h2>R3DHULK'S PIANO</h2>
+      <h2 style="color: brown;">R3DHULK'S PIANO</h2>
       <div class="column volume-slider">
         <span>Volume</span><input type="range" min="0" max="1" value="0.5" step="any">
       </div>
@@ -44,4 +45,4 @@
 
 </body>
 
-</html>
+</html>   
